agregue un h3 y un parrafo

--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
         <button>APRETAME!</button>
     </form>
     <p>este es un cambio</p>
+    <h3>agrego algo nuevo</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Dolorem facilis eaque eum quibusdam, quae similique dicta 
+        ea in velit recusandae illum voluptas commodi a non iusto 
+        repellat veniam sapiente laboriosam.</p>
 </body>
 </html>
