--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
         Dolorem facilis eaque eum quibusdam, quae similique dicta 
         ea in velit recusandae illum voluptas commodi a non iusto 
         repellat veniam sapiente laboriosam.</p>
+        <section>
+            <p>mi primer merge</p>
+        </section>
 </body>
 </html>
