--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularios</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form>
@@ -23,9 +24,9 @@
         </div>
         <button>APRETAME!</button>
     </form>
-    <p>este es un cambio</p>
+    <p class="parrafo1">este es un cambio</p>
     <h3>agrego algo nuevo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    <p class="desarrollo">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Dolorem facilis eaque eum quibusdam, quae similique dicta 
         ea in velit recusandae illum voluptas commodi a non iusto 
         repellat veniam sapiente laboriosam.</p>
