--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <section>
             <p>mi primer merge</p>
         </section>
+        <div class="rectangulo"></div>
 </body>
 </html>
